# matchmaker-orchestrator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  ecs-full-stack.yaml
.sqlx/: query-002c79d20ca453bf605069940bf639703ad701da9049b697b71645f627761042.json  query-051fe175aa6cfb1ba236833f28b80a4c70e680056ce960a912b9a1374cfc9819.json  query-0b5be9c56a8b6cfcefaa8bf2847bc0fb4a755726f17f0be1717b8459b85c666e.json  query-0d9aab3ed81cd102170a4832ad53882bec1dda2b1a9f6218548f5669cf8b1b49.json  query-104f06f79ce5ac575174abcc7b2b8733229540b3af92a66849fbfce0a3020fc6.json  query-2a6aea098e0e672e2e26315df3bf08d27995a9d55a86fb816dbf64c249213c5b.json  query-2dafb9f574eadea7ec210eebbfe0c30809081c3b3f240d38dfedc385e72cd12a.json  query-373dffb56f162cf3f72c17c3ce7f3eef7a6235c963688211b0e3c2ee406f2a17.json  query-3b9378d041becf8d8fb509c597e68c690a22063511faec691dac372ea0e48b72.json  query-40bc6b7884a5a61cdeff4155e61bfd2ef649c630dcc1dcb8b8411e353a6af95d.json  query-563e750343b89747baac10fb5c69dfe0de2fe4c7c8f3587ced666d792ff91673.json  query-618d2c17ef87f165c3393f72c58d1f38a5832fbba74bdd6df0e419d26f5a5520.json  query-63240056f55a44288ce81bb29deb7c1bc8363893ebe3eed740aeed3b962ae671.json  query-6a5f6b776d3c784a5d2d707e09879f1148d2426602b33f73af0b942de9ba784a.json  query-6bc1ccadbcf46cf52e2125f17d2def187e84049a8a7f1e63df3b6d0485f751b2.json  query-72fb5569ce8e77d4215b71ca722e8f4c4cede349f086e268bfa60bfe7fbd13f2.json  query-739fcd62db07d21b0e81fd055dfc4954a568b44177c7175a4ef1e9aed5e1c76c.json  query-73f020b47eda8cc2032d61e60798e88778984dba57a5fae0596c1af0fc64c186.json  (+16 more)
(+31 files in other folders)
