[package]
name = "matchmaker-orchestrator"
version = "0.3.2"
edition = "2024"
repository = "https://github.com/jkqq-0/matchmaker-orchestrator"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
dotenvy = "0.15.7"
pdf-extract = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["json"] }
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter", "json"]}
tower-http = {version = "0.6.8", features = ["trace"]}
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "uuid"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
tempfile = "3.24.0"
anyhow = "1.0.100"
aws-sdk-s3 = "1.120.0"
aws-config = "1.8.12"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
csv = "1.4.0"
calamine = "0.32.0"
url = "2.5.8"
async-trait = "0.1.89"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6.5"

[[example]]
name = "load_test"
path = "examples/load_test.rs"
